--- a/businesspartnersreportlist/webapp/i18n/i18n.properties
+++ b/businesspartnersreportlist/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for ns.businesspartners
+# This is the resource bundle for ns.businesspartnersreportlist
 
 #Texts for manifest.json
 
