changed manifest and i18n

--- a/businesspartnersreportlist/webapp/i18n/i18n.properties
+++ b/businesspartnersreportlist/webapp/i18n/i18n.properties
@@ -9,10 +9,10 @@ appTitle=Suppliers
 appDescription=An SAP Fiori application.
 
 #XFLD,27
-flpTitle=Suppliers
+flpTitle=Our Suppliers (List Report)
 
 #XFLD,39
-flpSubtitle=Our Suppliers
+flpSubtitle=Suppliers Fiori App with SAP Gateway Demo System ES5 using List Report template
 
 #XFLD,45:
 businesspartner=BusinessPartner
