changed manifest and i18n

--- a/businesspartnersreportlist/webapp/i18n/i18n.properties
+++ b/businesspartnersreportlist/webapp/i18n/i18n.properties
@@ -9,10 +9,10 @@ appTitle=Suppliers
 appDescription=An SAP Fiori application.
 
 #XFLD,27
-flpTitle=Our Suppliers (List Report)
+flpTitle=Suppliers Fiori App List Report
 
 #XFLD,39
-flpSubtitle=Suppliers Fiori App with SAP Gateway Demo System ES5 using List Report template
+flpSubtitle=Our Suppliers
 
 #XFLD,45:
 businesspartner=BusinessPartner
